# modelr

./: ;  CMakeLists.txt  README.md  model.blend  model.mtl  modelr.trace  shader.frag  shader.vert
assets/: arrow.blend  arrow.blend1  billboard-depth.vert  billboard.frag  billboard.vert  debug.frag  debug.vert  depth.frag  depth.vert  garage.blend  garage.blend1  garage.mtl  model.blend  model.blend1  model.mtl  multipart.blend  multipart.blend1  multipart.mtl  screen.frag  screen.vert  shader.frag  shader.vert  terrain.blend  terrain.blend1  terrain.mtl
doc/: data.md  lights.txt  plan.txt
src/: camera.h  config.h.in  fpscamera.cpp  fpscamera.h  gameobject.cpp  gameobject.h  gldynamicarray.cpp  gldynamicarray.h  input.cpp  input.h  main.cpp  material.cpp  material.h  model.cpp  model.h  modelobject.cpp  modelobject.h  renderer.cpp  renderer.h  resources.cpp  resources.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  utils.cpp  utils.h
src/render/: common.h  material.cpp  material.h  meshbuilder.cpp  meshbuilder.h  meshobject.cpp  meshobject.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  wavefront.cpp  wavefront.h
src/res/: assets.cpp  assets.h  lodepng.cpp  lodepng.h
